--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.12",
+    "@mui/x-date-pickers": "^6.16.1",
     "@tma.js/sdk-react": "^0.4.10",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-datepicker": "^4.20.0",
+    "react-datetime-picker": "^5.5.2",
     "react-dom": "^18.2.0",
+    "react-navigation": "^5.0.0",
     "react-router-dom": "^6.16.0",
-    "react-slide-routes": "^3.0.3"
+    "react-slide-routes": "^3.0.3",
+    "react-slide-rule": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
