--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.12",
     "@mui/x-date-pickers": "^6.16.1",
     "@tma.js/sdk-react": "^0.4.10",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-datepicker": "^4.20.0",
